--- a/output/public/stylesheets/master.css
+++ b/output/public/stylesheets/master.css
@@ -854,22 +854,22 @@ p.normal a {
     left: -999em;
 }
 .social-icons a.twitter {
-    background: url(/images/social_icons.png) 0 0;
+    background: url(/docs/images/social_icons.png) 0 0;
 }
 .social-icons a.facebook {
-    background: url(/images/social_icons.png) 0 -27px;
+    background: url(/docs/images/social_icons.png) 0 -27px;
 }
 .social-icons a.youtube {
-    background: url(/images/social_icons.png) 0 -54px;
+    background: url(/docs/images/social_icons.png) 0 -54px;
 }
 .social-icons a.twitter:hover {
-    background: url(/images/social_icons.png) -26px 0;
+    background: url(/docs/images/social_icons.png) -26px 0;
 }
 .social-icons a.facebook:hover {
-    background: url(/images/social_icons.png) -26px -27px;
+    background: url(/docs/images/social_icons.png) -26px -27px;
 }
 .social-icons a.youtube:hover {
-    background: url(/images/social_icons.png) -26px -54px;
+    background: url(/docs/images/social_icons.png) -26px -54px;
 }
 .item {
     margin-bottom: 20px;
